<resources>
    <string name="app_name">Let\'s Play Football</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_history">History</string>
    <string name="drawer_upcoming_matches">Upcoming Matches</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_pending_requests">Pending Requests</string>
    <string name="auth_failed">Authentication Failed!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="optional">Optional</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="close">Close</string>
    <string name="leave">Leave</string>
    <string name="players">Players</string>
    <string name="next_match">Next Match</string>
    <string name="league_manage_admin">Administrador(es) do racha</string>
    <string name="league_schedule_match">Schedule match</string>
    <string name="not_available_small">N/A</string>
    <string name="Add_non_registered_player">Add new Guest Player</string>
    <string name="search_players">Search Players</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="request_player_join_league">Join %1$s?</string>
    <string name="request_manage_player_join_league">Add %1$s to %2$s?</string>
    <string name="accept">Accept</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rules">Rules</string>
    <string name="rules_empty_text">Ops, there are no rules.</string>
    <string name="rules_empty_text_edit">Ops, there are no rules. Click here to edit your rules.</string>
    <string name="edit">Edit</string>


    <!-- Strings related to user Profile -->
    <string name="profile_full_name">Full Name: </string>
    <string name="nickname">Nickname</string>
    <string name="toast_profile_saved">Profile Saved!</string>
    <string name="toast_generic_saved">Saved!</string>
    <string name="toast_error_generic">Something went wrong!</string>
    <string name="toast_error_match_time">Error! Match time in the past</string>

    <!-- Strings related to login -->
    <string name="dialog_login_failed">Login Failed</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_sign_in_try_register">Sign-in failed, create new account?</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_cannot_remove_last_league_admin">League must have at least one Admin.</string>
    <string name="error_add_guest_as_manager">This player does not have an account on the app!</string>
    <string name="error_league_no_title">Error! Missing League title</string>
    <string name="error_no_teams">Error! You don\'t have any teams!</string>

    <!-- Strings related to settings screen -->
    <string name="settings_category_social">Social</string>
    <string name="settings_social_connected">Connected</string>
    <string name="settings_social_not_connected">Not connected</string>

    <!-- Empty lists text Strings -->
    <string name="empty_league_msg">You don\'t have any leagues yet.\nSearch or create one</string>


    <!-- Input hint text Strings -->
    <string name="hint_search_players">Search Players</string>
    <string name="hint_search_league">Search Leagues</string>
    <string name="hint_add_player">Add new player</string>
    <string name="hint_add_upcoming_match">Add upcoming match</string>
    <string name="hint_match_description">Ryan Giggs scored a hat-trick.\nScholes received a yellow card.</string>
    <string name="hint_team_name">Liverpool</string>
    <string name="hint_player_name">Pavel Nedvěd</string>
    <string name="hint_player_nickname">Nedved</string>
    <string name="hint_player_search">Del Piero</string>
    <string name="hint_league_search">Champions League</string>
    <string name="hint_league_name">Major League</string>


    <!-- Strings related to Matches -->
    <string name="check_in">Check-in</string>
    <string name="check_in_closed_msg">Check-in is currently closed</string>
    <string name="check_in_add_everyone_msg">Check-in everyone in the league</string>
    <string name="cant_go">Can\'t go</string>
    <string name="match_time">Match Time</string>
    <string name="teams">Teams</string>
    <string name="all_players">All Players</string>
    <string name="max_players">Max Players</string>
    <string name="manage_match_guests">Manage Guests</string>
    <string name="waiting_list">Waiting List</string>


    <!-- Strings that goes with Dialogs -->
    <string name="dialog_remove_player_title">Remove Player?</string>
    <string name="dialog_remove_player_message">Are you sure you want to remove %1$s from the league?</string>
    <string name="dialog_add_player_title">Add Player</string>
    <string name="dialog_add_player_message">Are you sure you want to add %1$s to the league?</string>
    <string name="dialog_remove_match_title">Remove Match?</string>
    <string name="dialog_remove_match_message">Are you sure you want to cancel upcoming match?</string>
    <string name="dialog_add_team_title">Add Team</string>
    <string name="dialog_add_team_message">Team title:</string>
    <string name="dialog_team_save_on_leave_message">Save teams?</string>
    <string name="dialog_rating_confirm">Confirm rating?</string>
    <string name="dialog_league_add_manager_title">Add new admin?</string>
    <string name="dialog_league_add_manager_msg">Add %1$s as admin of %2$s?</string>
    <string name="dialog_league_remove_manager_title">Remove admin?</string>
    <string name="dialog_league_remove_manager_msg">Remove %1$s as admin of %2$s?</string>
    <string name="dialog_choose_max_players">Select maximum number of players</string>
    <string name="dialog_confirm_check_in">Confirm check-in for %1$s?</string>
    <string name="dialog_confirm_check_out">Confirm remove %1$s from current match?</string>
    <string name="dialog_sort_teams_title">Sort Teams</string>
    <string name="dialog_sort_teams_message">Sorting should include goalkeepers?</string>
    <string name="dialog_join_league_msg">Send request to join league?</string>


    <!-- Strings regarding notifications -->
    <string name="notification_title_request">Pending Request</string>
    <string name="notification_add_to_league">%1$s has requested to join %2$s</string>
    <string name="notification_join_league">%1$s has invited you to join %2$s</string>


    <!-- Content description strings -->
    <string name="content_desc_search">Search</string>

</resources>
