<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/match_user_check_in_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center|bottom"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_check_in_closed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/check_in_closed_msg"
        android:visibility="visible"/>

    <Button
        android:id="@+id/bt_check_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_button_border_pos"
        android:layout_marginEnd="@dimen/margin_medium"
        style="@style/DefaultButtonStyle"
        android:text="@string/check_in"/>

    <Button
        android:id="@+id/bt_not_going"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button_border_neg"
        style="@style/DefaultButtonStyle"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/cant_go"/>

</LinearLayout>
