<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_margin">

            <com.daniribalbert.letsplayfootball.ui.views.EditableImageView
                android:id="@+id/edit_league_pic"
                android:layout_width="@dimen/profile_pic_size"
                android:layout_height="@dimen/profile_pic_size"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:labelFor="@+id/edit_league_title"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/edit_league_title"
                style="@style/ProfileTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center|start"
                android:hint="@string/league_name_hint"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:labelFor="@+id/league_description"
                android:text="@string/description"/>

            <EditText
                android:id="@+id/edit_league_description"
                style="@style/ProfileTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="top|start"
                android:hint="@string/optional"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLength="1000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom">

                <Button
                    android:id="@+id/bt_save_league"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingEnd="@dimen/padding_medium"
                    android:paddingStart="@dimen/padding_medium"
                    android:paddingTop="@dimen/padding_small"
                    android:text="@string/save"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/dialog_progress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>