<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daniribalbert.letsplayfootball.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/LoginButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg_light"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_light" />

            <Button
                android:id="@+id/google_sign_in_button"
                style="@style/LoginButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg_light"
                android:drawableStart="@drawable/common_google_signin_btn_icon_light"
                android:text="@string/common_signin_button_text_long"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_light" />

            <Button
                android:id="@+id/facebook_login_button"
                style="@style/LoginButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/com_facebook_button_background"
                android:textAllCaps="false"
                android:textColor="@color/com_facebook_button_text_color"
                tools:drawableStart="@drawable/com_facebook_button_icon"
                tools:text="@string/common_signin_button_text_long" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                style="@style/LoginButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/common_signin_button_text_long"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
