<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context=".ui.activities.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fab_menu_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_menu_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_search_players"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_search"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_menu_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/hint_add_player"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_person_add"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_menu_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/hint_add_upcoming_match"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_schedule"/>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_add"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
