<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_margin">

            <com.daniribalbert.letsplayfootball.ui.views.EditableImageView
                android:id="@+id/edit_match_pic"
                android:layout_width="@dimen/profile_pic_size"
                android:layout_height="@dimen/profile_pic_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_medium"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_time"/>

            <LinearLayout
                android:id="@+id/edit_match_time_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edit_match_time_hour"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    tools:text="16:00"/>

                <TextView
                    android:id="@+id/edit_match_time_day"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:gravity="center"
                    tools:text="13 Jul 2014"/>
            </LinearLayout>

            <EditText
                android:id="@+id/match_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/hint_match_description"
                android:lines="5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom">

                <Button
                    android:id="@+id/bt_save_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingEnd="@dimen/padding_medium"
                    android:paddingStart="@dimen/padding_medium"
                    android:paddingTop="@dimen/padding_small"
                    android:text="@string/save"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/dialog_progress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>